fix: last missing color, will add stylesheet in the future

--- a/front/src/components/PodcastDisplay/ProgressBar/ProgressBar.css
+++ b/front/src/components/PodcastDisplay/ProgressBar/ProgressBar.css
@@ -7,12 +7,6 @@
     overflow: hidden;
     margin-top: 10px;
   }
-  
-  .progress-bar {
-    height: 100%;
-    background-color: #76c7c0;
-    transition: width 0.3s ease;
-  }
 
   .segment-marker {
     position: absolute;
