--- a/front/src/index.css
+++ b/front/src/index.css
@@ -192,7 +192,7 @@ body {
 
 .progress-bar {
     height: 100%;
-    background-color: #76c7c0;
+    background-color: #0279bd;
     transition: width 0.3s ease;
 }
 
